Fixed image inside paragraphs on mobile

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1130,7 +1130,7 @@ h3.news-title {
     flex-direction: column;
   }
 
-  .sidenotes-container p > img {
+  .sidenotes-container p.side-by-side > img {
     margin: auto;
   }
 
